adding delete post api
